PowerShellCookbook/PowerShell-Docs-staging/reference/3.0/Microsoft.PowerShell.Security/Microsoft.PowerShell.Security.md
---
description:  
manager:  carmonm
ms.topic:  reference
author:  jpjofre
ms.prod:  powershell
keywords:  powershell,cmdlet
ms.date:  2016-12-12
title:  Microsoft.PowerShell.Security
ms.technology:  powershell
Locale:   en-US
Module Name:   Microsoft.PowerShell.Security
Download Help Link:   http://go.microsoft.com/fwlink/?linkid=210602
Help Version:   3.1.0.2
Module Guid:   a94c8c7e-9810-47c0-b8af-65089c13a35a
---


# Microsoft.PowerShell.Security Module
## Description
This section contains the help topics for the cmdlets that are installed with Windows PowerShell Microsoft.PowerShell.Security module. The Security module contains cmdlets and providers that manage the basic security features of Windows.

## Microsoft.PowerShell.Security Cmdlets
### [ConvertFrom-SecureString](ConvertFrom-SecureString.md)
Converts a secure string into an encrypted standard string.


### [ConvertTo-SecureString](ConvertTo-SecureString.md)
Converts encrypted standard strings to secure strings.


### [Get-Acl](Get-Acl.md)
Gets the security descriptor for a resource, such as a file or registry key.


### [Get-AuthenticodeSignature](Get-AuthenticodeSignature.md)
Gets information about the Authenticode signature in a file.


### [Get-Credential](Get-Credential.md)
Gets a credential object based on a user name and password.


### [Get-ExecutionPolicy](Get-ExecutionPolicy.md)
Gets the execution policies for the current session.


### [Get-PfxCertificate](Get-PfxCertificate.md)
Gets information about .pfx certificate files on the computer.


### [Set-Acl](Set-Acl.md)
Changes the security descriptor of a specified item, such as a file or a registry key.


### [Set-AuthenticodeSignature](Set-AuthenticodeSignature.md)
Adds an Authenticode signature to a Windows PowerShell script or other file.


### [Set-ExecutionPolicy](Set-ExecutionPolicy.md)
Changes the user preference for the Windows PowerShell execution policy.

